applications/todo/overlays/dev/todo-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-web
  labels:
    app: todo-web
    app.kubernetes.io/name: todo-web
    app.kubernetes.io/part-of: todo
    app.kubernetes.io/managed-by: gitops-app
spec:
  type: ClusterIP
  selector:
    app: todo-web
  ports:
  - name: http
    port: 80
    targetPort: http
