applications/todo/overlays/dev/todo-web/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-web
  labels:
    app: todo-web
    app.kubernetes.io/name: todo-web
    app.kubernetes.io/part-of: todo
    app.kubernetes.io/managed-by: gitops-app
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: kube-system
  hostnames:
  - todo-web.todo-dev.localhost
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: todo-web
      port: 80
